--- a/templates/ingress.yaml
+++ b/templates/ingress.yaml
@@ -1,41 +1,21 @@
-{{- if .Values.ingress.enabled -}}
-{{- $fullName := include "nexus.fullname" . -}}
-{{- $svcPort := .Values.service.port -}}
-{{- if semverCompare ">=1.14-0" .Capabilities.KubeVersion.GitVersion -}}
+{{- if .Values.nexus.ingress.enabled -}}
 apiVersion: networking.k8s.io/v1beta1
-{{- else -}}
-apiVersion: extensions/v1beta1
-{{- end }}
 kind: Ingress
 metadata:
-  name: {{ $fullName }}
-  labels:
-    {{- include "nexus.labels" . | nindent 4 }}
-  {{- with .Values.ingress.annotations }}
-  annotations:
-    {{- toYaml . | nindent 4 }}
-  {{- end }}
+  name: {{ .Values.nexus.ingress.name }}
+  namespace: {{ .Values.namespace }}
+
 spec:
-  {{- if .Values.ingress.tls }}
-  tls:
-    {{- range .Values.ingress.tls }}
-    - hosts:
-        {{- range .hosts }}
-        - {{ . | quote }}
-        {{- end }}
-      secretName: {{ .secretName }}
-    {{- end }}
-  {{- end }}
   rules:
-    {{- range .Values.ingress.hosts }}
-    - host: {{ .host | quote }}
-      http:
-        paths:
-          {{- range .paths }}
-          - path: {{ .path }}
-            backend:
-              serviceName: {{ $fullName }}
-              servicePort: {{ $svcPort }}
-          {{- end }}
-    {{- end }}
-  {{- end }}
+  - host: {{ .Values.nexus.ingress.hosts.host }}
+    http:
+      paths: {{- range .Values.nexus.ingress.hosts.paths }}
+        - path: /
+          pathType: Prefix
+          backend:
+            serviceName: {{ .service.name }}
+            servicePort: {{ .service.port }}
+        {{- end }}
+{{- end }}
+
+
