--- a/templates/pv-nexus.yml
+++ b/templates/pv-nexus.yml
@@ -1,27 +1,16 @@
+
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: nexus-pvc
+  annotations:
+    volume.beta.kubernetes.io/storage-class: "managed-nfs-storage"
 spec:
   accessModes:
   - ReadWriteOnce
-  storageClassName: manual
   resources:
     requests:
       storage: 9Gi
----
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: nexus-pv
-  labels:
-    type: local
-spec:
-  storageClassName: manual
-  capacity:
-    storage: 10Gi
-  accessModes:
-    - ReadWriteOnce
-  nfs:
-    path: /kubedata/nexus
-    server: 192.168.48.139
+
+
+
